# doctorai

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  PRD.md  README.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml
app/: __init__.py  agents.py  bot.py  config.py  main.py
scripts/: deploy_cloud_run.sh  generate_asset.py
tests/: conftest.py  test_agents.py
tests/e2e/: user-flows.spec.ts
web/: index.html
